--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,13 @@
     "keywords": ["laravel", "amethyst", "amethyst-price-rule", "price-rule"],
     "license": "MIT",
     "require": {
-        "php": ">=7.1",
-        "amethyst/common": "0.1.*",
+        "php": ">=7.2",
+        "amethyst/core": "0.2.*",
         "mossadal/math-parser": "^1.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "~7.1",
-        "orchestra/testbench": "3.*"
+        "phpunit/phpunit": "*",
+        "orchestra/testbench": "*"
     },
     "autoload": {
         "psr-4" : {
